<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.xwintop</groupId>
  <artifactId>xJavaFxTool</artifactId>
  <version>0.2.3-jdk15</version>
  <packaging>jar</packaging>
  <name>xJavaFxTool</name>
  <description>基于JavaFx搭建的实用小工具集合</description>
  <url>https://gitee.com/xwintop/xJavaFxTool</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.test.skip>true</maven.test.skip>
    <maven.compiler.source>15</maven.compiler.source>
    <maven.compiler.target>15</maven.compiler.target>
  </properties>
  <repositories>
    <repository>
      <id>aliyunmaven</id>
      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>xwintop-maven</id>
      <url>https://864381832.github.io/maven/repository</url>
    </repository>
    <repository>
      <id>spring-snapshots</id>
      <url>http://repo.spring.io/snapshot</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>spring-milestones</id>
      <url>http://repo.spring.io/milestone</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>15</version>
    </dependency>

    <dependency>
      <groupId>com.xwintop</groupId>
      <artifactId>xcore</artifactId>
      <version>0.0.6-jdk11</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.12</version>
      <optional>true</optional>
      <scope>provided</scope>
    </dependency>

    <!-- dom4j 需要的依赖 -->
    <dependency>
      <groupId>jaxen</groupId>
      <artifactId>jaxen</artifactId>
      <version>1.2.0</version>
    </dependency>

    <!-- oshi获取系统信息工具 -->
    <dependency>
      <groupId>com.github.oshi</groupId>
      <artifactId>oshi-core</artifactId>
      <version>3.9.1</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <!--
      运行方式：执行 mvn javafx:run
      运行说明：因为很多开发人员电脑上多个JRE并存，默认PATH下的JRE版本不一定是15，
      因此请先设置环境变量JDK_15_HOME指向JDK15的目录。
       -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.5</version>
        <configuration>
          <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>
          <executable>${env.JDK_15_HOME}/bin/java.exe</executable>
        </configuration>
      </plugin>

      <!--
      在 JDK15 环境中直接执行 mvn package 即可打包成附带 JRE 的 exe 可执行文件
      -->
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.4.2</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>package</goal>
            </goals>
            <configuration>
              <!-- 需要查看控制台输出的话再打开下面这个配置 -->
              <!--
              <winConfig>
                <headerType>console</headerType>
              </winConfig>
              -->
              <name>xJavaFxTool</name>
              <vmArgs>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</vmArgs>
              <displayName>xJavaFxTool</displayName>
              <jrePath>${env.JDK_15_HOME}</jrePath>
              <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>
              <bundleJre>true</bundleJre>
              <generateInstaller>false</generateInstaller>
              <administratorRequired>false</administratorRequired>
              <platform>auto</platform>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
